# robot

./: .gitignore  AxisShape_8h.html  AxisShape_8h_source.html  CMakeLists.txt  CoordinateSystem_8cpp.html  CoordinateSystem_8h.html  CoordinateSystem_8h_source.html  HandleUartMsg_8cpp.html  HandleUartMsg_8h.html  HandleUartMsg_8h_source.html  IHandleUartMsg_8h.html  IHandleUartMsg_8h_source.html  IProtocolParser_8h.html  IProtocolParser_8h_source.html  IShape_8h.html  IShape_8h_source.html  IUart_8h.html  IUart_8h_source.html  ProtoclDataStructures_8h.html  ProtoclDataStructures_8h_source.html  ProtocolStateMachine_8cpp.html  ProtocolStateMachine_8h.html  ProtocolStateMachine_8h_source.html  README_8md.html  SensorDataParser_8h.html  SensorDataParser_8h_source.html  ShapeObject_8cpp.html  ShapeObject_8h.html  ShapeObject_8h_source.html  ThreadPool_8cpp.html  ThreadPool_8h.html  ThreadPool_8h_source.html  ____init_____8py.html  annotated.html  capture_8h.html  capture_8h_source.html  capture__linux__pc_8c.html  classAxisShape-members.html  classAxisShape.html  classCoordinateSystem-members.html  (+279 more)
.github/workflows/: cmake.yml  doxygen.ymal
Lapack/: CMakeLists.txt
Lapack/Scr/: dgemm.c  dgettri.c  dtrti2.c  dtrtri.c
cmake/: functions.cmake
comm_protocol/: CMakeLists.txt  robot.cpp  robot.h
comm_protocol/protocol-v1/: HandleUartMsg.h  IHandleUartMsg.h  ProtoclDataStructures.h  SensorDataParser.h  messages.h
comm_protocol/test/: CMakeLists.txt  test1.cpp
common/: ThreadPool  ThreadPool.cpp  ThreadPool.h  logger.c  logger.h
docs/: Doxyfile  server.py
hal/: CMakeLists.txt  IUart.h  qrdecode.c
hal/emul/: CMakeLists.txt  uart_emul.h
hal/linux/: CMakeLists.txt  signals.h  uart_linux.cpp
hal/linux/imx/: capture.c  signals.c
hal/linux/pc/: capture_linux_pc.c  uart_linux.cpp
hal/windows/: uart_win.cpp
hal/zephyr/: CMakeLists.txt  uart_zephyr.cpp
mcu/: init_project.sh  jtag.sh
mcu/hellow_world/: CMakeLists.txt  app.overlay  git.h  prj.conf
mcu/hellow_world/src/: main.c  main.cpp  pcb9685.c  pcb9685.h  uart.h
mcu/robot_controller/: CMakeLists.txt  app.overlay  git.h  prj.conf
mcu/robot_controller/src/: HandleUartMsg.h  main.cpp  motor.cpp  motor.h  pcb9685.cpp  pcb9685.h  uart.c
robot/: CMakeLists.txt
robot/comm_protocol/: CMakeLists.txt  IProtocolParser.h  robot.h
robot/comm_protocol/protocol-v1/: IHandleUartMsg.h  ProtoclDataStructures.h  ProtocolStateMachine.cpp  ProtocolStateMachine.h  messages.h
robot/comm_protocol/test/: CMakeLists.txt  test1.cpp
robot/common/: HandleUartMsg.cpp  HandleUartMsg.h  ThreadPool.h  logger.h
robot/hal/: IUart.h  capture.h  qrdecode.h
robot/hal/emul/: uart_emul.cpp
robot/hal/linux/: CMakeLists.txt  uart_linux.h
robot/hal/linux/imx/: pxp.c  pxp.h
robot/hal/linux/pc/: signals.c  uart_linux.h
robot/hal/windows/: CMakeLists.txt  capture.c  uart_win.h
robot/hal/zephyr/: uart_zephyr.cpp  uart_zephyr.h
robot/lib/: CMakeLists.txt  ik_optim  ik_optim.c  matrix.c  matrix.h  model.c  model.h  optim.c  optim.h  optimization.c  optimization.h  template.h
robot/python/: CMakeLists.txt  ik_generator.py  requirements.txt  setup.py.in
robot/python/robot/: __init__.py  model.py
robot/python/robot/generator/: jacobian.py  kinetics.py  mse_gradient.py
robot/python/robot/templates/: jacobian_template.c
robot/python/src/: model.c  model.h  robot.c
robot/tests/: CMakeLists.txt  cube_demo.cpp  ik.c  robot_demo.cpp
robot/viewer/: AxisObject.cpp  AxisObject.h  AxisShape.h  CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.h  IShape.h  IShapeObjectBase.cpp  IShapeObjectBase.h  ShapeObject.cpp  ShapeObject.h  cube.cpp  cube.h  cube_demo.cpp  main.cpp  robot.cpp  robot.h  robot_demo.cpp  screen.cpp  screen.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+105 more)
x64-windows/debug/lib/: SDL2d.lib  libcurl-d.lib  zlibd.lib
x64-windows/debug/lib/manual-link/: SDL2maind.lib
x64-windows/debug/lib/pkgconfig/: sdl2.pc
x64-windows/lib/: SDL2.lib  curl.lib  jsoncpp.lib
x64-windows/lib/manual-link/: SDL2main.lib
x64-windows/lib/pkgconfig/: sdl2.pc
x64-windows/share/curl/: vcpkg.spdx.json  vcpkg_abi_info.txt
x64-windows/share/jsoncpp/: jsoncpp-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
x64-windows/share/sdl2/: vcpkg.spdx.json  vcpkg_abi_info.txt
x64-windows/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
x64-windows/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
x64-windows/share/zlib/: vcpkg.spdx.json  vcpkg_abi_info.txt
