add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/hal )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/comm_protocol )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/lib )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/tests )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/viewer )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/python )

#add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/mcu)


#target_link_libraries(foo INTERFACE ${foo_LIBRARY})
#target_include_directories(foo INTERFACE ${foo_INCLUDE_DIR})

